# foundry-mcp

./: .cursorignore  .gitignore  .worktree-config.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLI_TRANSFORMATION_TASKS.md  CONTEXT_OPERATIONS_GUIDE.md  CONTEXT_PATCH_IMPROVEMENT_PLAN.md  Cargo.toml  IMPLEMENTATION_PLAN.md  INSTALLATION.md  LICENSE.md  PRD.md  README.md  RELEASE.md  TOOLS.md  build.rs  claude-convo.txt  claude_command_examples.md  create_foundry_project.rs  cursor_command_examples.md  debug_test.rs  full_suite_output.txt  linear_test_output.txt  mise.toml  new_linear_tests_output.txt  product_spec.md  release.toml  task_list.md  technical_implementation.md  test_validation
.cargo/: config.toml
.claude/agents/: foundry-mcp-agent.md
.cursor/: mcp.json
.cursor/commands/: foundry_update_spec.md
.cursor/rules/: clippy-best-practices.mdc  codanna.mdc  code-quality.mdc  foundry-architecture.mdc  foundry-implementation.mdc  foundry-user-preferences.mdc  foundry.mdc  functional-programming.mdc  rust-standards.mdc  testing-patterns.mdc
.github/scripts/: extract-changelog.sh
.github/workflows/: ci.yml  release.yml
docs/: backends.md
foundry-mcp-macros/: Cargo.toml
foundry-mcp-macros/src/: lib.rs
schemas/: linear.graphql
scripts/: introspect_linear_schema.sh
src/: cache.rs  errors.rs  lazy.rs  lib.rs  main.rs  profiling.rs  progress.rs  security.rs  test_environment.rs  test_utils.rs  tools.rs  yaml_editor.rs
src/cli/: args.rs  config.rs  mod.rs
src/cli/commands/: analyze_project.rs  create_project.rs  create_spec.rs  delete_spec.rs  get_foundry_help.rs  install.rs  list_projects.rs  list_specs.rs  load_project.rs  load_spec.rs  mod.rs  project.rs  serve.rs  status.rs  uninstall.rs  update_spec.rs  (+1 more)
src/core/: context_patch.rs  context_patch_helper.rs  edit_engine.rs  filesystem.rs  foundry.rs  mod.rs  project.rs  spec.rs  validation.rs
src/filesystem/: manager.rs  mod.rs
src/handlers/: create_spec.rs  load_spec.rs  mod.rs  server.rs  setup_project.rs  update_spec.rs
src/mcp/: error.rs  handlers.rs  macros.rs  mod.rs  server.rs  tools.rs  traits.rs  yaml_operations.rs
src/models/: base.rs  mod.rs  specification.rs  task.rs
src/repository/: mod.rs  project.rs  specification.rs
src/types/: edit_commands.rs  mod.rs  project.rs  responses.rs  spec.rs
src/utils/: formatting.rs  id_generation.rs  mod.rs  paths.rs  response.rs  status_formatter.rs  timestamp.rs  validation.rs
test_support/: test_environment_base.rs
tests/: cli_tests.rs  context_patch_integration_tests.rs  edit_commands_tests.rs  end_to_end_tests.rs  install_claude_code_tests.rs  install_cursor_tests.rs  installation_tests.rs  integration_tests.rs  linear_backend_integration_tests.rs  linear_backend_tests.rs  mcp_protocol_tests.rs  mod.rs  project_management_tests.rs  repository_integration_tests.rs  specification_tests.rs  status_all_environments_tests.rs  status_cursor_tests.rs  template_edge_case_tests.rs  uninstall_claude_code_tests.rs  uninstall_cursor_tests.rs  yaml_editor_tests.rs
tests/common/: mod.rs  test_utils.rs
(+36 files in other folders)
