[package]
name = "project-manager-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
chrono = { version = "0.4.41", features = ["serde"] }
dirs = "6.0.0"
rust-mcp-schema = "0.7.2"
rust-mcp-sdk = "0.5.1"
serde = "1.0.219"
serde_json = "1.0.142"
tokio = "1.47.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.18.0"
