[package]
name = "project-manager-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
dirs = "6.0.0"
home = "0.5"
indicatif = "0.17"
inquire = "0.7"
rust-mcp-schema = "0.7.2"
rust-mcp-sdk = "0.5.1"
serde = "1.0.219"
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["sync"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.18.0"
dashmap = "6.1.0"

[dev-dependencies]
tempfile = "3.10.1"
tokio-test = "0.4.4"
mockall = "0.13.0"
serde_json = "1.0.142"
futures = "0.3.31"
