[workspace]
members = ["."]

[package]
name = "foundry-mcp"
version = "0.6.1"
edition = "2024"
description = "A comprehensive CLI tool and MCP server for deterministic project management and AI coding assistant integration"
license = "MIT"
authors = ["Chris Freeman <cfreeman86@gmail.com>"]
repository = "https://github.com/cafreeman/foundry-mcp"
homepage = "https://github.com/cafreeman/foundry-mcp"
documentation = "https://docs.rs/foundry-mcp"
readme = "README.md"
keywords = ["mcp", "ai", "project-management", "cli", "coding-assistant"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".cursor/",
    ".cargo/",
]

[[bin]]
name = "foundry"
path = "src/main.rs"


[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
console = "0.16"
dirs = "6.0.0"
rust-mcp-schema = "0.7.2"
rust-mcp-sdk = "0.6.0"
rust-mcp-transport = "0.5.0"
serde = "1.0.219"
serde_json = "1.0.142"
strsim = "0.11"
thiserror = "2.0"
tokio = { version = "1.47.1", features = ["sync"] }

tracing = "0.1.40"
tracing-subscriber = "0.3.18"
which = "6.0.0"

[dev-dependencies]
tempfile = "3.10.1"
tokio-test = "0.4.4"
futures = "0.3.31"
assert_fs = "1.1"
predicates = "3.0"
temp-env = "0.3.6"

[lints.clippy]
all = "deny"
redundant_clone = "deny"
map_flatten = "deny"
manual_ok_or = "deny"
option_if_let_else = "deny"
redundant_closure = "deny"
unnecessary_filter_map = "deny"
