[package]
name = "foundry-mcp-macros"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for Foundry MCP tool generation"
license = "MIT"
authors = ["Chris Freeman <cfreeman86@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = { version = "2.0.90", features = ["full", "extra-traits"] }
